--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -4,7 +4,7 @@
   position: sticky;
   top: calc(38px + 1rem);
   z-index: 2;
-  padding: 1rem 4rem;
+  padding: 0 2rem;
   height: 15vh;
   background: rgba($color: $primary-color, $alpha: 0.7);
   display: flex;
@@ -98,8 +98,7 @@
 
 @media screen and (max-width: $mobile) {
   .controls {
-    padding: 1rem;
-    // height: 10vh;
+    padding: 0 1rem;
   }
   .audio-list {
     grid-template-columns: repeat(1, 1fr);
