--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,27 +1,17 @@
-<nz-tabset [nzAnimated]="false">
-  <nz-tab [nzTitle]="'HSK 1' | translate">
-    <div class="tab-content">
+<nz-tabset [nzAnimated]="true">
+  <nz-tab [nzTitle]="'HSK 1' | translate">  
       <app-audio-list [audioList]="audioList"></app-audio-list>
-    </div>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    <div class="tab-content">
       Coming soon...
-    </div>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    <div class="tab-content">
       Coming soon...
-    </div>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    <div class="tab-content">
       Coming soon...
-    </div>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    <div class="tab-content">
       Coming soon...
-    </div>
   </nz-tab>
 </nz-tabset>
