--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -1,4 +1,4 @@
-<nz-tabset [nzAnimated]="false">
+<nz-tabset [nzAnimated]="true">
   <nz-tab [nzTitle]="'HSK 1' | translate">
     <div class="tab-content">
       <app-audio-list [audioList]="audioList"></app-audio-list>
