--- a/src/app/pages/vocabulary/vocabulary.component.scss
+++ b/src/app/pages/vocabulary/vocabulary.component.scss
@@ -1,4 +1,6 @@
 @import "/src/styles.scss";
+@import "src/assets/scss/_tab.scss";
+@import "src/assets/scss/_collapse.scss";
 
 .tab-content {
   padding: 1rem 0;
