--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'src/variables';
-@import 'src/assets/scss/_tab.scss';
-@import 'src/assets/scss/_collapse.scss';
+@import "src/variables";
 
 *,
 *::after,
