--- a/src/app/pages/curriculum/curriculum.component.scss
+++ b/src/app/pages/curriculum/curriculum.component.scss
@@ -1,53 +1,2 @@
-@import '/src/styles.scss';
-
-::ng-deep {
-  .ant-tabs-top > .ant-tabs-nav {
-    position: sticky;
-    top: 0;
-    z-index: 3;
-    margin: 0;
-    background: $white;
-  }
-  .ant-tabs-ink-bar {
-    background: $primary-color;
-  }
-  .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
-    color: $primary-color;
-  }
-  .ant-tabs-tab {
-    padding: 0.5rem 0;
-    transition: $transition;
-  }
-  .ant-tabs-tab:hover {
-    color: $primary-color;
-  }
-  .ant-tabs-tab + .ant-tabs-tab {
-    margin: 0 0 0 1rem;
-  }
-  .ant-tabs-tab-btn {
-    transition: none;
-  }
-}
-
-nz-tabset {
-  padding: 0rem 10rem;
-  margin-bottom: 0;
-  height: 75vh;
-  overflow-y: hidden;
-  .tab-content {
-    padding: 1rem 0;
-  }
-}
-
-
-@media screen and (max-width: $tablet) {
-  nz-tabset {
-    padding: 0 4rem;
-  }
-}
-
-@media screen and (max-width: $mobile) {
-  nz-tabset {
-    padding: 0 1rem;
-  }
-}
+@import "/src/styles.scss";
+@import "src/assets/scss/_tab.scss";
