--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,7 @@
     <img loading="lazy" src="/assets/images/plym.webp" alt="" />
     <img loading="lazy" src="/assets/images/rcep.webp" alt="" />
     <img loading="lazy" src="/assets/images/rcep2.webp" alt="" />
+    <img style="display: none;" src="/assets/images/thumbnail.webp" alt="">
   </div>
   <p class="text">
     {{ 'INTRO4' | translate }}
