--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,7 +125,7 @@ li {
 }
 ::-webkit-scrollbar-thumb {
   height: initial;
-  background: $black;
+  background: $white-secondary;
   border-radius: 50px;
 }
 
