--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -13,6 +13,9 @@
     cursor: pointer;
     &__logo {
       color: $primary-color;
+      background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
     &__menu {
       display: flex;
@@ -20,6 +23,9 @@
       align-items: center;
       .selected {
         color: $primary-color;
+        background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.9), rgba($color: #88C0D0, $alpha: 1));
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
         opacity: 0.8;
       }
       a {
@@ -32,6 +38,9 @@
       }
       a:hover {
         color: $primary-color;
+        background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
       }
     }
   }
@@ -75,7 +84,7 @@
       height: 10vh;
     }
   }
-
+  
   @media screen and (max-width: $tablet) {
     .navbar {
       padding: 1rem 4rem;
@@ -87,7 +96,7 @@
       left: calc(2vw - 0rem);
     }
   }
-
+  
   @media screen and (max-width: $mobile) {
     .navbar {
       padding: 1rem;
@@ -113,6 +122,7 @@
           height: 2rem;
           line-height: 1rem;
           background: $primary-color;
+          background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 1));
           color: $white;
           font-size: 1rem;
           border-radius: 50%;
