--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -10,17 +10,18 @@
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    cursor: pointer;
     &__logo {
       color: $primary-color;
-      background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+      background-image: $linear-gradient;
       background-clip: text;
       -webkit-text-fill-color: transparent;
+      cursor: pointer;
     }
     &__menu {
       display: flex;
       flex-flow: row wrap;
       align-items: center;
+      cursor: pointer;
       .selected {
         color: $primary-color;
         background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.9), rgba($color: #88C0D0, $alpha: 1));
@@ -38,7 +39,7 @@
       }
       a:hover {
         color: $primary-color;
-        background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+        background-image: $linear-gradient;
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
