--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -15,6 +15,7 @@
     align-content: center;
     justify-content: center;
     align-items: flex-start;
+    box-shadow: 1px 1px 0 0 $second-white;
     border-radius: 0.5rem;
     .audio__title {
       color: $white;
@@ -65,7 +66,7 @@
       flex-flow: column;
       justify-content: flex-start;
       align-items: flex-start;
-      border-bottom: 1px solid $white-secondary;
+      box-shadow: 1px 1px 0 0 $second-white;
       border-radius: 0.5rem;
       cursor: pointer;
       scroll-snap-align: start;
@@ -81,10 +82,8 @@
       }
     }
     .audio:hover {
-      // background: $white-secondary;
-      background-image: linear-gradient(135deg, rgba($color: $white-secondary, $alpha: 1), rgba($color: $white-secondary, $alpha: 0.75));
-      border-bottom: 1px solid rgba($color: $gray, $alpha: 0.3);
-      // box-shadow: 0 0 10px 1px rgba($color: $gray, $alpha: 0.5);
+      background: $second-white;
+      box-shadow: 1px 1px 0 0 rgba($color: $gray, $alpha: 0.25);
     }
     .audio:nth-child(odd) {
       animation: slideToRight 0.75s ease 0s backwards;
