--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -4,12 +4,12 @@
   }
   .ant-tabs-ink-bar {
     // background: $primary-color;
-    background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+    background-image: $linear-gradient;
     opacity: 0.5;
   }
   .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
     color: $primary-color;
-    background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+    background-image: $linear-gradient;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: none;
@@ -22,7 +22,7 @@
   }
   .ant-tabs-tab:hover {
     color: $primary-color;
-    background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
+    background-image: $linear-gradient;
     background-clip: text;
     -webkit-text-fill-color: transparent;
   }
