--- a/src/styles.scss
+++ b/src/styles.scss
@@ -126,6 +126,7 @@ li {
 ::-webkit-scrollbar-thumb {
   height: initial;
   background: $second-white;
+  background-image: $white-linear-gradient;
   border-radius: 50px;
 }
 
