--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -38,7 +38,6 @@
         margin-left: 1rem;
       }
       a:hover {
-        color: $primary-color;
         background-image: $linear-gradient;
         background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -123,7 +122,7 @@
           height: 2rem;
           line-height: 1rem;
           background: $primary-color;
-          background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 1));
+          background-image: $blue-linear-gradient;
           color: $white;
           font-size: 1rem;
           border-radius: 50%;
