--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,8 +125,7 @@ li {
 }
 ::-webkit-scrollbar-thumb {
   height: initial;
-  background: $second-white;
-  background-image: $white-linear-gradient;
+  background: $magenta-blue-white-linear-gradient;
   border-radius: 50px;
 }
 
