--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -12,7 +12,7 @@
     align-items: center;
     &__logo {
       color: $primary-color;
-      background-image: $linear-gradient;
+      background: $linear-gradient;
       background-clip: text;
       -webkit-text-fill-color: transparent;
       cursor: pointer;
@@ -24,7 +24,7 @@
       cursor: pointer;
       .selected {
         color: $primary-color;
-        background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.9), rgba($color: #88C0D0, $alpha: 1));
+        background: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.9), rgba($color: #88C0D0, $alpha: 1));
         background-clip: text;
         -webkit-text-fill-color: transparent;
         opacity: 0.8;
@@ -38,7 +38,7 @@
         margin-left: 1rem;
       }
       a:hover {
-        background-image: $linear-gradient;
+        background: $linear-gradient;
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
@@ -121,8 +121,7 @@
           width: 2rem;
           height: 2rem;
           line-height: 1rem;
-          background: $primary-color;
-          background-image: $blue-linear-gradient;
+          background: $blue-linear-gradient;
           color: $white;
           font-size: 1rem;
           border-radius: 50%;
