--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -8,8 +8,7 @@
     z-index: 2;
     padding: 0 2rem;
     height: 15vh;
-    // background: rgba($color: $primary-color, $alpha: 0.7);
-    background-image: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.75), rgba($color: #88C0D0, $alpha: 0.75));
+    background: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.75), rgba($color: #88C0D0, $alpha: 0.75));
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -50,8 +49,7 @@
         }
       }
       .current {
-        background: transparent;
-        background-image: $magenta-blue-linear-gradient;
+        background: $magenta-blue-linear-gradient;
         opacity: 0.5;
       }
     }
@@ -91,7 +89,7 @@
       }
     }
     .audio:hover {
-      background: $second-white;
+      background: $magenta-blue-white-linear-gradient;
       box-shadow: 1px 1px 0 0 rgba($color: $gray, $alpha: 0.1);
     }
     .audio:nth-child(odd) {
