--- a/src/assets/scss/_collapse.scss
+++ b/src/assets/scss/_collapse.scss
@@ -31,7 +31,7 @@ nz-collapse {
   border: none;
   overflow-y: scroll;
   nz-collapse-panel {
-    background: $second-white;
+    background: $magenta-blue-white-linear-gradient;
     box-shadow: 1px 1px 0 0 rgba($color: $gray, $alpha: 0.1);
     border-radius: 0.5rem;
     font-weight: bold;
