--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -90,7 +90,7 @@
       }
     }
     .audio:hover {
-      background: $magenta-blue-white-linear-gradient;
+      background: $white-linear-gradient;
       box-shadow: 1px 1px 0 0 rgba($color: $gray, $alpha: 0.1);
     }
     .audio:nth-child(odd) {
