--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -116,9 +116,10 @@
       right: 0.5rem;
       bottom: calc(5vh - 0.25rem);
       ul {
+        display: flex;
         .info {
           padding: 0.5rem;
-          margin-bottom: 0.5rem;
+          margin-right: 0.5rem;
           width: 2rem;
           height: 2rem;
           line-height: 1rem;
