--- a/src/assets/scss/_collapse.scss
+++ b/src/assets/scss/_collapse.scss
@@ -4,7 +4,7 @@
   }
   .ant-collapse>.ant-collapse-item>.ant-collapse-header {
     padding: 1rem;
-    color: $gray;
+    color: rgba($color: $black, $alpha: 0.75);
   }
   .ant-collapse-content {
     border-top: none;
@@ -54,7 +54,7 @@ nz-collapse {
           margin-left: 1rem;
           display: flex;
           flex-flow: column;
-          color: #00000073;
+          color: $gray;
         }
       }
       .word:not(:last-of-type) {
