--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -29,6 +29,9 @@
     text-indent: 2rem;
     text-align: justify;
   }
+  .text > .text {
+    margin-bottom: 1rem;
+  }
   .slider {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
