--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -20,11 +20,14 @@
   </footer>
   <aside class="aside">
     <ul>
-      <a class="info" target="_blank" href="https://www.facebook.com/mipan1234567890">
-        <i nz-icon nzType="facebook" nzTheme="fill"></i>
-      </a>
       <a class="info" target="_blank" href="https://github.com/lqtoan">
         <i nz-icon nzType="github" nzTheme="fill"></i>
+      </a>
+      <a class="info" target="_blank" href="mailto:lqtoan37@gmail.com">
+        <i nz-icon nzType="mail" nzTheme="fill"></i>
+      </a>
+      <a class="info" target="_blank" href="https://www.linkedin.com/in/lqtoan/">
+        <i nz-icon nzType="linkedin" nzTheme="fill"></i>
       </a>
     </ul>
   </aside>
