--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -1,27 +1,27 @@
 <nz-tabset [nzAnimated]="true">
   <nz-tab [nzTitle]="'HSK 1' | translate">
-    <div class="tab-content">
+    <ng-container class="tab-content">
       <app-audio-list [audioList]="audioList"></app-audio-list>
-    </div>
+    </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    <div class="tab-content">
+    <ng-container class="tab-content">
       Coming soon...
-    </div>
+    </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    <div class="tab-content">
+    <ng-container class="tab-content">
       Coming soon...
-    </div>
+    </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    <div class="tab-content">
+    <ng-container class="tab-content">
       Coming soon...
-    </div>
+    </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    <div class="tab-content">
+    <ng-container class="tab-content">
       Coming soon...
-    </div>
+    </ng-container>
   </nz-tab>
 </nz-tabset>
