--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -14,4 +14,16 @@
   <nz-tab [nzTitle]="'HSK 5' | translate">
     Coming soon...
   </nz-tab>
+  <nz-tab [nzTitle]="'HSK 6' | translate">
+    Coming soon...
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 7' | translate">
+    Coming soon...
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 8' | translate">
+    Coming soon...
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 9' | translate">
+    Coming soon...
+  </nz-tab>
 </nz-tabset>
