--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -24,4 +24,24 @@
       Coming soon...
     </ng-container>
   </nz-tab>
+  <nz-tab [nzTitle]="'HSK 6' | translate">
+    <ng-container class="tab-content">
+      Coming soon...
+    </ng-container>
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 7' | translate">
+    <ng-container class="tab-content">
+      Coming soon...
+    </ng-container>
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 8' | translate">
+    <ng-container class="tab-content">
+      Coming soon...
+    </ng-container>
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 9' | translate">
+    <ng-container class="tab-content">
+      Coming soon...
+    </ng-container>
+  </nz-tab>
 </nz-tabset>
