--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -36,4 +36,24 @@
       Coming soon...
     </div>
   </nz-tab>
+  <nz-tab [nzTitle]="'HSK 6' | translate">
+    <div class="tab-content">
+      Coming soon...
+    </div>
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 7' | translate">
+    <div class="tab-content">
+      Coming soon...
+    </div>
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 8' | translate">
+    <div class="tab-content">
+      Coming soon...
+    </div>
+  </nz-tab>
+  <nz-tab [nzTitle]="'HSK 9' | translate">
+    <div class="tab-content">
+      Coming soon...
+    </div>
+  </nz-tab>
 </nz-tabset>
