--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -3,27 +3,27 @@
     <app-audio-list [audioList]="audioList"></app-audio-list>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 6' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 7' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 8' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 9' | translate">
-    Coming soon...
+    {{ 'COMING_SOON' | translate }}
   </nz-tab>
 </nz-tabset>
