--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -15,6 +15,7 @@
       color: $primary-color;
       background: $linear-gradient;
       background-clip: text;
+      font-weight: 600;
       -webkit-text-fill-color: transparent;
       cursor: pointer;
     }
