--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,6 +1,6 @@
 <nz-tabset [nzAnimated]="true">
   <nz-tab [nzTitle]="'HSK 1' | translate">
-    <app-audio-list [audioList]="audioList"></app-audio-list>
+    <app-audio-list [audioList]="audioList" [audioHeight]="'6rem'"></app-audio-list>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
     {{ 'COMING_SOON' | translate }}
