--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,10 +2,6 @@
   <p class="text">
     {{ 'INTRO1' | translate }}
   </p>
-  <p class="text">
-    {{ 'INTRO3' | translate }}
-  </p>
-
   <div class="slider">
     <img loading="eager" src="/assets/images/sino.webp" alt="" />
     <img loading="lazy" src="/assets/images/huawei.webp" alt="" />
@@ -19,6 +15,14 @@
     <img loading="lazy" src="/assets/images/rcep.webp" alt="" />
     <img loading="lazy" src="/assets/images/rcep2.webp" alt="" />
     <img style="display: none;" src="/assets/images/thumbnail.webp" alt="">
+  </div>
+  <p class="text">
+    {{ 'INTRO3' | translate }}
+  </p>
+  <div class="slider">
+    <img loading="eager" src="/assets/images/01.webp" alt="">
+    <img loading="lazy" src="/assets/images/01.webp" alt="">
+    <img loading="lazy" src="/assets/images/01.webp" alt="">
   </div>
   <p class="text">
     {{ 'INTRO4' | translate }}
