--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -8,7 +8,7 @@
     top: calc(38px + 0.5rem);
     z-index: 2;
     padding: 0 2rem;
-    height: 15vh;
+    height: 7rem;
     background: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.75), rgba($color: #88C0D0, $alpha: 0.75));
     display: flex;
     flex-direction: column;
@@ -57,17 +57,17 @@
   }
   
   .audio-list {
-    padding-right: 0.5rem;
-    height: 45vh;
+    padding-right: 0.75rem;
+    height: calc(60vh - 7rem);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-flow: row;
-    grid-gap: 0.5rem;
+    grid-gap: 0.75rem;
     overflow-x: hidden;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
     .audio {
-      padding: 0.5rem;
+      padding: 0.75rem;
       background: #fff;
       display: flex;
       flex-flow: column;
@@ -117,10 +117,9 @@
     }
     .audio-list {
       grid-template-columns: repeat(1, 1fr);
-      grid-gap: 1rem;
+      grid-gap: 0.75rem;
       .audio {
         padding: 0.5rem 1rem;
-        font-size: 1rem;
       }
     }
   }
