--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -2,7 +2,7 @@
   <header class="navbar">
     <div>
       <h2 routerLink="/" class="navbar__logo">{{ 'SUPER_CHINESE' | translate }}</h2>
-      <small class="navbar__slogan">"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời..."</small>
+      <small class="navbar__slogan">{{ 'SLOGAN' | translate }}</small>
     </div>
     <nav class="navbar__menu">
       <a *ngFor="let item of navItem" [routerLink]="['/', item.link]" routerLinkActive="selected">{{
