--- a/src/assets/scss/_collapse.scss
+++ b/src/assets/scss/_collapse.scss
@@ -3,7 +3,7 @@
     border: none;
   }
   .ant-collapse>.ant-collapse-item>.ant-collapse-header {
-    padding: 1rem;
+    padding: 0.75rem 1rem;
     color: rgba($color: $black, $alpha: 0.9);
   }
   .ant-collapse-content {
@@ -13,7 +13,7 @@
     border-radius: 0 0 0.5rem 0.5rem;
   }
   .ant-collapse-content>.ant-collapse-content-box {
-    padding: 0.5rem;
+    padding: 0 1rem;
   }
   .ant-collapse>.ant-collapse-item:last-child,
   .ant-collapse>.ant-collapse-item:last-child>.ant-collapse-header {
@@ -27,38 +27,42 @@
 nz-collapse {
   background: $white;
   display: grid;
-  gap: 0.75rem;
+  gap: 0.5rem;
   border: none;
   overflow-y: scroll;
   nz-collapse-panel {
     background: $magenta-blue-white-linear-gradient;
-    box-shadow: 1px 1px 0 0 rgba($color: $gray, $alpha: 0.1);
+    box-shadow: 0 1px 0 0 rgba($color: $second-white, $alpha: 0.9);
     border-radius: 0.5rem;
-    font-weight: bold;
+    font-weight: 900;
     transition: $transition;
     .wordList {
       .word {
-        padding: 0 0.5rem 0.5rem;
-        line-height: $line-height;
-        border-radius: 5px;
+        padding: 0.5rem 0;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         &--name {
-          font-size: larger;
-          display: inline-block;
           min-width: 4rem;
           color: $black;
+          font-size: 1rem;
+          font-weight: 600;
+          letter-spacing: 1px;
+        }
+        &--pinyin {
+          color: $primary-color;
+        }
+        &--define {
+          color: #81A1C1;
         }
         .wrap {
-          margin-left: 1rem;
+          margin-left: 0.5rem;
           display: flex;
           flex-flow: column;
-          color: $gray;
+          line-height: 100%;
         }
       }
       .word:not(:last-of-type) {
-        margin-bottom: 0.5rem;
         border-bottom: 1px solid rgba($color: $gray, $alpha: 0.3);
       }
     }
