--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -33,8 +33,7 @@
     margin-bottom: 1rem;
   }
   .slider {
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     padding: 0.5rem;
     background: #fff;
     display: grid;
