--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,6 +5,7 @@ $white: #eceff4;
 $second-white: #d8dee9;
 $primary-color: #b48ead;
 $gray: #4C566A;
+$red: #BF616A;
 
 $linear-gradient: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
 $white-linear-gradient: linear-gradient(135deg, rgba($color: $second-white, $alpha: 1), rgba($color: $second-white, $alpha: 0.5));
