--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -5,19 +5,9 @@
       <small class="navbar__slogan">{{ 'SLOGAN' | translate }}</small>
     </div>
     <nav class="navbar__menu">
-      <a *ngFor="let item of navItem" [routerLink]="['/', item.link]" routerLinkActive="selected">{{
-        item.name | translate
-      }}</a>
-      <button *ngIf="authService.isAuthenticated$ | async" (click)="authService.logout()">Log out</button>
-      <button *ngIf="!(authService.isAuthenticated$ | async)" (click)="authService.loginWithRedirect()">Log in</button>
+      <app-change-language class="navbar__menu__item"></app-change-language>
+      <app-user-menu class="navbar__menu__item"></app-user-menu>
     </nav>
-    <select class="changeLanguage" (change)="changeLanguage($event)">
-      <option *ngIf="selectedLanguage" selected [value]="selectedLanguage">
-        {{ selectedLanguage | uppercase | translate }}
-      </option>
-      <option *ngIf="selectedLanguage != 'vi'" value="vi">{{ 'VI' | translate }}</option>
-      <option *ngIf="selectedLanguage != 'en'" value="en">{{ 'EN' | translate }}</option>
-    </select>
   </header>
   <router-outlet></router-outlet>
   <footer class="footer">
