--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,8 +53,8 @@ select {
   cursor: pointer;
   border: none;
   outline: none;
-  background: $black;
-  color: $white;
+  background: $white;
+  color: $black;
 }
 
 select::-ms-expand {
