--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -8,8 +8,7 @@
       <a *ngFor="let item of navItem" [routerLink]="['/', item.link]" routerLinkActive="selected">{{
         item.name | translate
       }}</a>
-      <button *ngIf="authService.isAuthenticated$ | async" (click)="authService.logout()">Log out</button>
-      <button *ngIf="!(authService.isAuthenticated$ | async)" (click)="authService.loginWithRedirect()">Log in</button>
+      <app-user-menu></app-user-menu>
     </nav>
   </header>
   <router-outlet></router-outlet>
