--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <header class="navbar">
     <div>
-      <h2 routerLink="/" class="navbar__logo">{{ 'SUPER_CHINESE' | translate }}</h2>
+      <h2 routerLink="/home" class="navbar__logo">{{ 'SUPER_CHINESE' | translate }}</h2>
       <small class="navbar__slogan">{{ 'SLOGAN' | translate }}</small>
     </div>
     <nav class="navbar__menu">
