--- a/src/app/pages/setting/setting.component.html
+++ b/src/app/pages/setting/setting.component.html
@@ -1,4 +1,4 @@
 <div class="page">
-  <span>Chọn ngôn ngữ: </span>
+  <span>{{ 'CHOOSE_LANGUAGE' | translate }}: </span>
   <app-change-language></app-change-language>
 </div>
