--- a/src/app/pages/vocabulary/vocabulary.component.scss
+++ b/src/app/pages/vocabulary/vocabulary.component.scss
@@ -1,6 +1,6 @@
 @import "/src/styles.scss";
-@import 'src/assets/scss/_tab.scss';
-@import 'src/assets/scss/_collapse.scss';
+@import 'tab';
+@import 'collapse';
 
 .tab-content {
   margin-top: 0.5rem;
