--- a/src/app/pages/setting/setting.component.html
+++ b/src/app/pages/setting/setting.component.html
@@ -1,4 +1,5 @@
 <div class="page">
-  <span>{{ 'CHOOSE_LANGUAGE' | translate }}: </span>
+  <strong>{{ 'CHOOSE_LANGUAGE' | translate }}: </strong>
   <app-change-language></app-change-language>
+
 </div>
