--- a/src/assets/scss/_collapse.scss
+++ b/src/assets/scss/_collapse.scss
@@ -46,7 +46,7 @@ nz-collapse {
           min-width: 4rem;
           color: $black;
           font-size: 1rem;
-          font-weight: 600;
+          font-weight: bold;
           letter-spacing: 1px;
         }
         &--pinyin {
