--- a/src/app/core/layout/user-menu/user-menu.component.scss
+++ b/src/app/core/layout/user-menu/user-menu.component.scss
@@ -4,7 +4,7 @@
   .ant-dropdown-trigger {
     padding: 0.25rem;
     border: 2px solid rgba($color: $gray, $alpha: 0.75);
-    border-radius: 2rem 1rem 1rem 2rem;
+    border-radius: 2rem;
     transition: $transition;
   }
   .ant-dropdown-trigger:hover {
