--- a/src/app/core/layout/user-menu/user-menu.component.html
+++ b/src/app/core/layout/user-menu/user-menu.component.html
@@ -6,7 +6,7 @@
 </ng-container>
 
 <nz-dropdown-menu #menu="nzDropdownMenu">
-  <ul nz-menu nzSelectable>
+  <ul nz-menu>
     <li *ngFor="let item of navItem">
       <span nz-menu-item (click)="navigate(item.link)">
         {{ item.name | translate }}
