--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -1,7 +1,7 @@
 <nz-tabset [nzAnimated]="true">
   <nz-tab [nzTitle]="'HSK 1' | translate">
     <ng-container class="tab-content">
-      <app-audio-list [audioList]="hsk1AudioList"></app-audio-list>
+      <app-audio-list [audio]="hsk1Audio"></app-audio-list>
     </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
