--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,5 +6,6 @@
     <div routerLink="/vocabulary" class="card">{{ 'VOCABULARY' | translate }}</div>
     <div routerLink="/curriculum" class="card">{{ 'CURRICULUM' | translate }}</div>
     <div routerLink="/exercise" class="card">{{ 'EXERCISE' | translate }}</div>
+    <div routerLink="/about" class="card">{{ 'ABOUT' | translate }}</div>
   </div>
 </div>
