--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -3,27 +3,43 @@
     <app-audio-list [audio]="hsk1Audio"></app-audio-list>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 6' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 7' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 8' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 9' | translate">
-    {{ 'COMING_SOON' | translate }}
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
 </nz-tabset>
