--- a/src/app/core/layout/user-menu/user-menu.component.html
+++ b/src/app/core/layout/user-menu/user-menu.component.html
@@ -1,7 +1,7 @@
-<ng-container *ngIf="(authService.user$ | async) as user">
-  <div style="color: white;" nz-dropdown [nzDropdownMenu]="menu" nzTrigger="click" nzPlacement="bottomRight">
+<ng-container *ngIf="authService.user$ | async as user">
+  <div style="color: white" nz-dropdown [nzDropdownMenu]="menu" nzTrigger="click" nzPlacement="bottomRight">
     <nz-avatar nzIcon="user" [nzSrc]="user.picture"></nz-avatar>
-    <i style="margin-left: 0.5rem;" nz-icon nzType="down" nzTheme="outline"></i>
+    <i style="margin-left: 0.5rem" nz-icon nzType="down" nzTheme="outline"></i>
   </div>
 </ng-container>
 
@@ -9,9 +9,12 @@
   <ul nz-menu>
     <li *ngFor="let item of navItem">
       <span nz-menu-item (click)="navigate(item.link)">
+        <span style="margin-right: 0.5rem" nz-icon [nzType]="item.icon" nzTheme="fill"></span>
         {{ item.name | translate }}
       </span>
     </li>
-    <li nz-menu-item nzMatchRouter class="logout" (click)="authService.logout()">{{ 'LOGOUT' | translate}}</li>
+    <li nz-menu-item nzMatchRouter class="logout" (click)="authService.logout()">
+      <span style="margin-right: 0.5rem" nz-icon nzType="logout" nzTheme="outline"></span>{{ 'LOGOUT' | translate }}
+    </li>
   </ul>
-</nz-dropdown-menu> 
+</nz-dropdown-menu>
