--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -5,43 +5,27 @@
     </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 6' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 7' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 8' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 9' | translate">
-    <ng-container class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </ng-container>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
 </nz-tabset>
