--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,1 +1,12 @@
-<p class="page">support works!</p>
+<aside class="page">
+  <ul>
+    <p>Email</p>
+    <a class="info" target="_blank" href="mailto:lqtoan37@gmail.com">
+      <i nz-icon nzType="mail" nzTheme="fill"></i>
+    </a>
+    <span>Linkedin</span>
+    <a class="info" target="_blank" href="https://www.linkedin.com/in/lqtoan/">
+      <i nz-icon nzType="linkedin" nzTheme="fill"></i>
+    </a>
+  </ul>
+</aside>
