--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -17,43 +17,27 @@
     </div>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 6' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 7' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 8' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 9' | translate">
-    <div class="tab-content">
-      {{ 'COMING_SOON' | translate }}
-    </div>
+    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
   </nz-tab>
 </nz-tabset>
